<resources>
    <string name="app_name">RoomPracticeActivity</string>

    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="addtitile">add title</string>
    <string name="add_description">add description</string>
    <string name="title">Title</string>
    <string name="description">Add Description</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="notes_taking_application">Note Taking Application</string>
    <string name="order">order</string>
    <string name="newest_on_top">newest on top</string>
    <string name="oldest_on_top">oldest on top</string>
    <string name="title_should_not_be_empty">Notes Title should not be empty</string>
    <string name="notes_deleted">Notes is deleted</string>
    <string name="undo">UNDO</string>
    <string name="orderchange">orderChange</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="text_no_notes">No Notes Found!</string>
    <string name="text_empty_state_description">There are no notes here. Try adding few notes</string>
</resources>
