<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="10"
            android:fontFamily="sans-serif-light"
            android:gravity="start"
            android:hint="@string/title"
            android:background="@null"
            android:padding="12dp"
            android:inputType="textCapSentences|textMultiLine"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/title_text_color"
            android:textStyle="bold"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toStartOf="@+id/colorPallete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello Guhan" />


        <ImageView
            android:id="@+id/colorPallete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_notes_title"
            app:layout_constraintBottom_toBottomOf="@+id/edit_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_word"
            app:layout_constraintTop_toTopOf="@+id/edit_word" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/setRemainder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_delete"
            android:text="@string/set_remainder"
            app:cornerRadius="6dp"
            android:backgroundTint="?attr/colorOnPrimary"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            app:borderWidth="6dp"
            app:iconSize="32dp"
            app:elevation="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_word"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/description"
            android:lineSpacingExtra="5dp"
            android:padding="12dp"
            android:inputType="textCapSentences|textMultiLine"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setRemainder" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>